	PR c/17424 	* c-typeck.c (c_expr_sizeof_expr): Check for error_mark_node.

testsuite:
	* gcc.dg/pr17424-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@87705 138bc75d-0d04-0410-961f-82ee72b054a4